# CppStump

./: CMakeLists.txt  readme.md
cmake/: CMakeLists.txt  fetch_googletest.cmake
src/app/: CMakeLists.txt  main.cpp  main.test.cpp
src/util/util/: CMakeLists.txt  util.cpp  util.h  util.test.cpp
